changing the style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,17 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.aim-background {
+  background-image: url("../public/images/bgImage3.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.missionone-background {
+  background-image: url("../public/images/bgImage4.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
