--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.programmes-background {
+  background-image: url("../public/images/bgImage5.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
