--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,3 +36,31 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.public-one-background {
+  background-image: url("../public/images/bgImage6.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.public-two-background {
+  background-image: url("../public/images/bgImage7.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.public-three-background {
+  background-image: url("../public/images/bgImage8.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.public-four-background {
+  background-image: url("../public/images/bgImage9.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
